--- a/blogproject/blog/templates/blog/post_list.html
+++ b/blogproject/blog/templates/blog/post_list.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block content %}
+<section>
     <h1>Lista postów</h1>
     {% for post in posts %}
         <article>
@@ -13,4 +14,5 @@
             <p>{{post.body}}</p>
         </article>
     {% endfor %}
+</section>
 {% endblock %}
